  [[https://www.github.com/dkogan/mrcal/blob/master/analyses/validate-uncertainty.py][=analyses/validate-uncertainty.py=]] tools. These are /very/ useful to check the
  various assumptions made by the mrcal processing

- The [[file:mrcal-convert-lensmodel.html][=mrcal-convert-lensmodel=]] tool has =--all= to write out /all/ the models
  from a joint re-solve

- Added new [[file:mrcal-show-model-resolution.html][=mrcal-show-model-resolution=]] tool

** C API 
Some guts of the calibration machinery have been ported to C and exposed as C
functions:

- Added C implementations of Procrustes fits:
  =mrcal_align_procrustes_vectors_R01()= and
  =mrcal_align_procrustes_points_Rt01()=. These are now the internal
  implementations of the Python [[file:mrcal-python-api-reference.html#-align_procrustes_vectors_R01][=mrcal.align_procrustes_vectors_R01()=]] and
  [[file:mrcal-python-api-reference.html#-align_procrustes_points_Rt01][=mrcal.align_procrustes_points_Rt01()=]] functions

- Added =mrcal_R_aligned_to_vector()= C function. This is now the internal
  implementation of [[file:mrcal-python-api-reference.html#-R_aligned_to_vector][=mrcal.R_aligned_to_vector()=]]

- Added simple math operation functions to the C API:
  - =double         mrcal_point3_inner(const mrcal_point3_t a, const mrcal_point3_t b)=
  - =double         mrcal_point3_norm2(const mrcal_point3_t a)=
  - =double         mrcal_point3_mag  (const mrcal_point3_t a)=
  - =mrcal_point3_t mrcal_point3_add  (const mrcal_point3_t a, const mrcal_point3_t b)=
  - =mrcal_point3_t mrcal_point3_sub  (const mrcal_point3_t a, const mrcal_point3_t b)=
  - =mrcal_point3_t mrcal_point3_scale(const mrcal_point3_t a, const double s)=
  - =mrcal_point3_t mrcal_point3_cross(const mrcal_point3_t a, const mrcal_point3_t b)=

  And similar for =mrcal_point2_t=, except there's no =mrcal_point2_cross()=

- Added simple point and pose printing utilities:
  - =mrcal_point2_print(p)=
  - =mrcal_point3_print(p)=
  - =mrcal_Rt_print(Rt)=